2004-07-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkactiongroup.xml (add_actions)
	(add_toggle_actions) (add_radio_actions) Document new user_data
	param.

2004-07-15  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkbutton.xml Add description of optional use_underline
	param added in PyGTK 2.4
	* pygtk-gtktogglebutton.xml Add description of optional use_underline
	param added in PyGTK 2.4. Add missing constructor param description.
	* pygtk-gtkcheckbutton.xml Add description of optional use_underline
	param added in PyGTK 2.4.
	* pygtk-gtkradiobutton.xml Add description of optional use_underline
	param added in PyGTK 2.4.
	* pygtk-gtkcheckmenuitem.xml Add description of optional use_underline
	param added in PyGTK 2.4.
	* pygtk-gtkmenuitem.xml Add description of optional use_underline
	param added in PyGTK 2.4.
	* pygtk-gtkradiomenuitem.xml Add description of optional use_underline
	param added in PyGTK 2.4.

2004-07-12  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkwindow.xml (set_geometry_hints) Add missing param names.
	Thanks to Theo Reed in #147458.

2004-07-09  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkbin.xml ("child") Add description of this attribute.

	* pygtk-gtkcheckmenuitem ("active") Add description of this attribute.
	("indicator-size") Add description of this style property.

	* pygtk-gtkgammadialog.xml (Attributes) Add description of attributes.

2004-07-08  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkcolor.xml (gtk.gdk.parse_color) Add info on exceptions.

	* pygtk-gdkcolormap.xml (alloc_color) Modify description on
	exceptions.

2004-07-04  John Finlay  <finlay@moeraki.com>

	* pygtk-pygtkgenerictreemodel.xml Fix broken links.

	* pygtk-gtktreemodel.xml (rows_reordered) ("rows-reordered")
	Update these to indicate top level row reordering.

	* pygtk-gdkcolormap.xml (query_color) Add description of this
	PyGTK 2.4 method.

2004-07-03  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkpixbuf.xml (subpixbuf) Add description of this new