@@ -1,3 +1,8 @@
+2004-07-19  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtktreeview.xml (get_path_at_pos) Return value if no path
+	is None.
+
 2004-07-18  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkactiongroup.xml (add_actions)
